// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build all 1`] = `undefined`;

exports[`build > build base 1`] = `undefined`;

exports[`build > build base change default selector case  > index 1`] = `
"page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base change default selector case  > legacy 1`] = `
"page {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base with custom types 1`] = `undefined`;

exports[`build > build nothing 1`] = `undefined`;

exports[`build > hash map init buildBase 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 2`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 3`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "63db7ca5b53712b728c1d8ec13e0c242c48247df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 2 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "63db7ca5b53712b728c1d8ec13e0c242c48247df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildComponents diff 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "63db7ca5b53712b728c1d8ec13e0c242c48247df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "717b4d82b63b9e34469a2acfe201106ae1707050",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.alert",
    {
      "value": "62e503f070c8eaa45c14a2bc7422098dca77b8d3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.avatar",
    {
      "value": "fe20bd84da449029ad117c5c8f344bb0b21b1468",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.badge",
    {
      "value": "ec63487bb0d704776f092661a06a135cbce9e6c1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.button",
    {
      "value": "16b957b4976d47addfda26e1371700c4ea515ffd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.chat",
    {
      "value": "38a1a51e73cd32923abf2697470f13b8fb851f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.checkbox",
    {
      "value": "906d45e1f70a737c952ed09ded15e3967f6a9a22",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.input",
    {
      "value": "bc390a21d308431fa0a5878ce7558fafa31c1863",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.link",
    {
      "value": "2722aa30908b382e616c5c7acbac80257b64dad9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.progress",
    {
      "value": "75196d07696b61544e71511f2237740861768812",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.radio",
    {
      "value": "3a0252e7ec3694321a8385050728368d9921e85a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.range",
    {
      "value": "2032c04d91386315050811adbdae075079d56170",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.select",
    {
      "value": "90ffe8603ac8cade35bc8fe03d2dca9b55c14bc7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.textarea",
    {
      "value": "4e57e7f1b115e3889e8b0f579ed5e6ed907927c3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.toggle",
    {
      "value": "6dbce070366db66dc1ca71a5305e8f4d723ed98b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.loading",
    {
      "value": "d99e89507dc925a9baedada02f1fdcaf2b0c73d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.mask",
    {
      "value": "8d8a9544759c9798d042a635ca7a67c234935cc0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.table",
    {
      "value": "ff2fd21282f8f2ed5e25ce104818b58280af5b8d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.skeleton",
    {
      "value": "f400c650e9ff920d542a77d6a82ae0265d23dd9c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.form",
    {
      "value": "4eb53977b6d38b92bd97a3add3e603dac89b21da",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.radial-progress",
    {
      "value": "7cabee7e3ec68c5c1f6911326f33db06efe02b88",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.countdown",
    {
      "value": "f41bb65dd8a51ca8c2a4ae1ae4f2f7456445c525",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.diff",
    {
      "value": "672e39a126e1ccfbf20c3a42ee10f0eac562391d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.kbd",
    {
      "value": "fb8bc503e6291a624a756aafd1a65e212bf9fb40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.tooltip",
    {
      "value": "4c950466ba95d8b8e9013c06ce7d2bfbc32c28f9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.toast",
    {
      "value": "df160c8992b9dca1a861b8f6dc4cd7c7158cbc47",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.steps",
    {
      "value": "e4f5d701ec6bcc9221d8875352720365a5bcdb77",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.collapse",
    {
      "value": "b7006df79351680d2afc67ad392f40227fe02dcc",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.join",
    {
      "value": "469e346b1a716738b09af59ac7d7b5de28ba8b7b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.indicator",
    {
      "value": "bcd957fd8e24aa98005544e1657bba9cae4e19fb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.divider",
    {
      "value": "93b409c6c2857cebbad67bd046fe016f04d99307",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.stack",
    {
      "value": "24cf54b27f889fc1c26773a56e12df804d885830",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.tab",
    {
      "value": "b2a47af17fb7eb1acf25d275975382e2efdf0b67",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.dropdown",
    {
      "value": "ed977dcb6cdd715bc1b8f4e3c8481fb76533f5a8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.swap",
    {
      "value": "91c561a7f3be1532639c5817136cea682442381a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.card",
    {
      "value": "d6ec4d930fdfff0e407b9e3c634a5308edbec7a9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.carousel",
    {
      "value": "d73197f497897f947b52284b4734d0804e57c7d0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.stat",
    {
      "value": "7121e077f41abad8db32a1f5d57a6174342b2fa1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.timeline",
    {
      "value": "f606e4fc88aff1cfa8d604d675d5e9cd4d0676ae",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.breadcrumbs",
    {
      "value": "6a7724b405eb66ade35eb209d6fbe5f5a8af8b21",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.bottom-navigation",
    {
      "value": "d263607b2d24aaf3e42130ed3334695cedd58404",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.menu",
    {
      "value": "6a4e851bd7f402a2ba7f199036a980f0be90d6e2",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.navbar",
    {
      "value": "45d14328d1039684023b9cd6205425ba02ca8f91",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.file-input",
    {
      "value": "e6e0b1cc001674e0e8d04f7bcbae4ecdb2cc2541",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.rating",
    {
      "value": "767cdebd43dc6518a53de5ae5315da09222a43e8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.drawer",
    {
      "value": "1e1d5da7e8e8869eba10278363587f902fe5e7ca",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.footer",
    {
      "value": "66ad3ae411fcf9cb60f2c5e79a321f4a98040a7c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.hero",
    {
      "value": "1ea0e917e1876478a3f10fa1900bc5aa3d72bfa0",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildUtilities 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "63db7ca5b53712b728c1d8ec13e0c242c48247df",
    },
  ],
]
`;
